<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>20</version>
    </parent>

    <groupId>io.quarkiverse.qubit</groupId>
    <artifactId>quarkus-qubit-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Quarkus - Qubit - Parent</name>
    <description>Quarkus extension for lambda-based Panache queries with build-time Criteria Query transformation (QUery Bytecode Into Typed-queries)</description>

    <properties>
        <!-- Override quarkiverse-parent default Java version -->
        <maven.compiler.release>21</maven.compiler.release>

        <!-- Quarkus version -->
        <quarkus.version>3.29.3</quarkus.version>

        <!-- Plugin versions (override quarkiverse-parent where needed) -->
        <surefire-plugin.version>3.5.4</surefire-plugin.version>

        <!-- Skip formatter plugin from quarkiverse-parent (not needed for this project) -->
        <format.skip>true</format.skip>
    </properties>

    <modules>
        <module>runtime</module>
        <module>deployment</module>
        <module>integration-tests</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <!-- Override quarkiverse-parent plugins that are not needed -->
        <plugins>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>format-sources</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code</groupId>
                <artifactId>impsort-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>sort-imports</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <!-- TEST-006: Mutation Testing with Pitest -->
                <plugin>
                    <groupId>org.pitest</groupId>
                    <artifactId>pitest-maven</artifactId>
                    <version>1.22.0</version>
                    <configuration>
                        <targetClasses>
                            <param>io.quarkiverse.qubit.deployment.*</param>
                        </targetClasses>
                        <targetTests>
                            <param>io.quarkiverse.qubit.deployment.*Test</param>
                        </targetTests>
                        <excludedClasses>
                            <!-- Exclude Gizmo-generated bytecode classes -->
                            <param>io.quarkiverse.qubit.deployment.generation.QueryExecutorClassGenerator</param>
                            <param>io.quarkiverse.qubit.deployment.generation.QubitBytecodeGenerator</param>
                        </excludedClasses>
                        <mutators>
                            <mutator>DEFAULTS</mutator>
                        </mutators>
                        <!-- Ignore logging mutations -->
                        <avoidCallsTo>
                            <avoidCallsTo>io.quarkus.logging.Log</avoidCallsTo>
                            <avoidCallsTo>org.jboss.logging.Logger</avoidCallsTo>
                            <avoidCallsTo>java.util.logging.Logger</avoidCallsTo>
                        </avoidCallsTo>
                        <outputFormats>
                            <outputFormat>HTML</outputFormat>
                            <outputFormat>XML</outputFormat>
                        </outputFormats>
                        <timestampedReports>false</timestampedReports>
                        <threads>16</threads>
                        <timeoutConstant>10000</timeoutConstant>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.pitest</groupId>
                            <artifactId>pitest-junit5-plugin</artifactId>
                            <version>1.2.3</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
